--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,26 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto|Pacifico');
-p{
-  font-size: 2em;
+@import url("https://fonts.googleapis.com/css?family=Roboto|Pacifico");
+p {
+  color: rgb(248, 250, 246);
+  font-size: 2.2em;
   margin: 0;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: salmon;
 }
-select{
-    width: 50%;
-    margin-left: 25%;
-    padding: 6px;
-    border-radius: 5px;
+select {
+  width: 50%;
+  margin-left: 25%;
+  padding: 6px;
+  border-radius: 5px;
 }
-input{
-    width: 50%;
-    margin-left: 25%;
-    padding: 6px;
-    border-radius: 5px;
-    margin-top: 5px;
-    margin-bottom: 5px;
+input {
+  width: 50%;
+  margin-left: 25%;
+  padding: 6px;
+  border-radius: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
-.parent-div{
+.parent-div {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -26,57 +29,61 @@ input{
   width: 100%;
   font-family: Roboto, sans-serif;
 }
-.home-text{
+.home-text {
   font-family: Pacifico, cursive;
   font-size: 4em;
 }
-button{
-    width: 100px;
-    background-color: #bff8ff;
-    border: none;
-    height: 50px;
-    border-radius: 30px;
-    margin-right: 5px;
-    margin-left: 5px;
+button {
+  width: 100px;
+  background-color: #11b9cf;
+  border: none;
+  height: 50px;
+  border-radius: 30px;
+  margin-right: 5px;
+  margin-left: 5px;
 }
-.home-btn{
-    width: 175px;
-    height: 75px;
-    border-radius: 40px;
-    font-size: 1.2em;
+button:hover {
+  background-color: #7ae5f3;
 }
-.margin-btn{
-    margin-top: 4%;
+.home-btn {
+  width: 175px;
+  height: 75px;
+  border-radius: 40px;
+  font-size: 1.2em;
 }
-.vert-align{
-    height: 400px;
-    width: 85%;
-    margin-left: 7.5%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-.wTwo-btn{
-  margin-top: 3%;
-}
-.wSix-btn{
+.margin-btn {
   margin-top: 4%;
 }
-.row{
-    flex-direction: row;
-    display: flex;
-    justify-content: center;
+.vert-align {
+  height: 400px;
+  width: 85%;
+  margin-left: 7.5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
-.form{
-  font-size: 1em;
+.wTwo-btn {
+  margin-top: 3%;
+}
+.wSix-btn {
+  margin-top: 4%;
+}
+.row {
+  flex-direction: row;
+  display: flex;
+  justify-content: center;
+}
+.form {
+  color: rgb(255, 255, 255);
+  font-size: 1.3em;
   text-align: left;
   padding-left: 10px;
 }
-.p2{
+.p2 {
   font-size: 1em;
   float: right;
   padding-right: 10px;
 }
-.overarching-div:nth-child(2n){
-  background-color: lightgrey;
+.overarching-div:nth-child(2n) {
+  background-color: transparent;
 }
